Added config parser

--- a/config.ini
+++ b/config.ini
@@ -1,24 +1,24 @@
 [balancer]
 host = 127.0.0.1
 service = 60000
-max_dg_load = 1000  
+max_dg_load = 1000
 
 [server]
-name = server_1
+alias = server_1
 host = 127.0.0.2
 service = 60001
 
 [server]
-name = server_2
+alias = server_2
 host = 127.0.0.3
 service = 60002
 
 [server]
-name = server_3
+alias = server_3
 host = 127.0.0.4
 service = 60003
 
 [server]
-name = server_4
+alias = server_4
 host = 127.0.0.5
 service = 60004
