--- a/config.ini
+++ b/config.ini
@@ -1,20 +1,22 @@
 [balancer]
-host = 127.0.0.1
-service = 60000
+outer_host = 127.0.0.1
+outer_service = 60000
+inner_host = 127.0.0.1
+inner_service = 60001
 max_dg_load = 1000
 
 [server]
 host = 127.0.0.2
-service = 60001
-
-[server]
-host = 127.0.0.3
 service = 60002
 
 [server]
-host = 127.0.0.4
+host = 127.0.0.3
 service = 60003
 
 [server]
-host = 127.0.0.5
+host = 127.0.0.4
 service = 60004
+
+[server]
+host = 127.0.0.5
+service = 60005
